--- a/app/src/main/res/layout/plat_layout.xml
+++ b/app/src/main/res/layout/plat_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/photo"
+        android:id="@+id/plat_picture"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:padding="5dp" />
