--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,17 @@
 
     <ListView
         android:id="@+id/list"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 
     <ImageButton
         android:id="@+id/button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/logout"
         android:onClick="logout"
+        android:background="@drawable/logout"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/list"
         android:layout_alignEnd="@+id/list"
